unpackaged/main/default/objects/Case/fields/EmailSig__c.field-meta.xml
<CustomField>
    <fullName>EmailSig__c</fullName>
    <formula>if(BEGINS(OwnerId, &#39;00G&#39;), if(BEGINS(Owner:Queue.QueueName, &#39;AMS&#39;), &#39;TechnologyOne Application Managed Services&#39; , &#39;TechnologyOne Support Centre&#39;), if(Case_Owner_Reporting_Tags__c == &#39;AMS&#39;, &#39;TechnologyOne Application Managed Services&#39; , &#39;TechnologyOne Support Centre&#39;))</formula>
    <label>EmailSig</label>
    <type>Text</type>
</CustomField>