unpackaged/main/default/objects/Case/fields/Employee_Community_URL__c.field-meta.xml
<CustomField>
    <fullName>Employee_Community_URL__c</fullName>
    <formula>$Setup.T1_Control_Settings__c.Employee_Community_URL__c &amp; &quot;/&quot; &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Community URL</label>
    <type>Text</type>
</CustomField>