unpackaged/main/default/objects/Case/fields/Engagement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Engagement_End_Date__c</fullName>
    <label>Engagement End Date</label>
    <summarizedField>Engagement_Activity__c.End_Date__c</summarizedField>
    <summaryForeignKey>Engagement_Activity__c.Case__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>