unpackaged/main/default/objects/Case/fields/Engagement_Location__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Location__c</fullName>
    <description>Customer to select if engagement is to be onsite or remote</description>
    <inlineHelpText>Onsite or can be completed remotely</inlineHelpText>
    <label>Engagement Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>