unpackaged/main/default/objects/Case/fields/Engagement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Notes__c</fullName>
    <label>Engagement Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>