unpackaged/main/default/objects/Case/fields/Engagement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Start_Date__c</fullName>
    <label>Engagement Start Date</label>
    <summarizedField>Engagement_Activity__c.Start_Date__c</summarizedField>
    <summaryForeignKey>Engagement_Activity__c.Case__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>