unpackaged/main/default/objects/Case/fields/Engagement_Start_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Start_Reminder__c</fullName>
    <description>Calculated reminder date used to trigger sending email alert to customer.</description>
    <label>Engagement Start Reminder</label>
    <type>Date</type>
</CustomField>