unpackaged/main/default/objects/Case/fields/Environment_Upgrade_Version__c.field-meta.xml
<CustomField>
    <fullName>Environment_Upgrade_Version__c</fullName>
    <inlineHelpText>If requesting an environment upgrade, the release your environment will be upgraded to. Please note that this must be one of the latest two releases.</inlineHelpText>
    <label>Environment Upgrade Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2020B</fullName>
            </value>
            <value>
                <fullName>2020A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>