unpackaged/main/default/objects/Case/fields/Estimated_Travel_Expense__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Travel_Expense__c</fullName>
    <inlineHelpText>Inclusive of accommodation, travel etc</inlineHelpText>
    <label>Estimated Travel Expense</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>