unpackaged/main/default/objects/Case/fields/Exit_Entitlement_Process__c.field-meta.xml
<CustomField>
    <fullName>Exit_Entitlement_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to determine when the Entitlement process will be exited. This is required to overcome an issue with Competing Milestones after a Case has been closed.</description>
    <label>Exit Entitlement Process</label>
    <type>Checkbox</type>
</CustomField>