unpackaged/main/default/objects/Case/fields/Final_Resolution_MS_Warning__c.field-meta.xml
<CustomField>
    <fullName>Final_Resolution_MS_Warning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Final Resolution Milestone Warning</description>
    <label>Final Resolution MS Warning</label>
    <type>Checkbox</type>
</CustomField>