unpackaged/main/default/objects/Case/fields/Final_Resolution_Target__c.field-meta.xml
<CustomField>
    <fullName>Final_Resolution_Target__c</fullName>
    <description>Final Resolution Target date from Case Milestone.  Updated via Flow and Process.</description>
    <label>Final Resolution Target</label>
    <type>DateTime</type>
</CustomField>