unpackaged/main/default/objects/Case/fields/First_Response_Complete__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Updated by Workflow</inlineHelpText>
    <label>First Response Complete</label>
    <type>Checkbox</type>
</CustomField>