unpackaged/main/default/objects/Case/fields/Fix_Version__c.field-meta.xml
<CustomField>
    <fullName>Fix_Version__c</fullName>
    <description>Synched Jira field - to indicate the version the issue is fixed in.</description>
    <label>Fix Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>