unpackaged/main/default/objects/Case/fields/Fixed_Product__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Product__c</fullName>
    <inlineHelpText>This is the Fixed Product from Jira</inlineHelpText>
    <label>Fixed Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>