unpackaged/main/default/objects/Case/fields/Functional_Area__c.field-meta.xml
<CustomField>
    <fullName>Functional_Area__c</fullName>
    <description>Functional Area</description>
    <label>Functional Area (not used)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>