unpackaged/main/default/objects/Case/fields/Has_it_worked_before__c.field-meta.xml
<CustomField>
    <fullName>Has_it_worked_before__c</fullName>
    <description>Used to indicate whether the functionality has worked before - e.g. since go-live, upgrade etc.</description>
    <inlineHelpText>Indicate whether this functionality has ever worked before</inlineHelpText>
    <label>Has it worked before?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>