unpackaged/main/default/objects/Case/fields/High_or_Extreme_PII_Data__c.field-meta.xml
<CustomField>
    <fullName>High_or_Extreme_PII_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>LOW: Name (first &amp; last) only or work email 
MEDIUM: Name &amp; email only 
HIGH: Name, email &amp; home address only 
EXTREME: Name, email, home address &amp; any of: 
DOB, bank details, tax file no, passport no, health info, cc details, remuneration, religion</inlineHelpText>
    <label>High or Extreme PII Data</label>
    <type>Checkbox</type>
</CustomField>