unpackaged/main/default/objects/Case/fields/Im_the_Contact__c.field-meta.xml
<CustomField>
    <fullName>Im_the_Contact__c</fullName>
    <formula>LEN(ContactId) &gt; 0 &amp;&amp; ContactId = $User.ContactId</formula>
    <label>Im the Contact</label>
    <type>Checkbox</type>
</CustomField>