unpackaged/main/default/objects/Case/fields/Implementation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Date_Time__c</fullName>
    <label>Implementation Date/Time</label>
    <type>DateTime</type>
</CustomField>