unpackaged/main/default/objects/Case/fields/Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>Integration_ID__c</fullName>
    <description>Used for data migration</description>
    <externalId>true</externalId>
    <label>Integration ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>