unpackaged/main/default/objects/Case/fields/Interim_Resolution_MS_Warning__c.field-meta.xml
<CustomField>
    <fullName>Interim_Resolution_MS_Warning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Interim Resolution Milestone Warning</description>
    <label>Interim Resolution MS Warning</label>
    <type>Checkbox</type>
</CustomField>