unpackaged/main/default/objects/Case/fields/Interim_Resolution_MS_Warning_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Interim_Resolution_MS_Warning_Indicator__c</fullName>
    <formula>IF( Interim_Resolution_MS_Warning__c = True,image(&quot;/resource/1400032220000/graphicsPack/16/fatcow/farmfresh/alarm_bell.png&quot;,&quot;*&quot;,16,16),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Int</label>
    <type>Text</type>
</CustomField>