unpackaged/main/default/objects/Case/fields/Interim_Resolution_Target__c.field-meta.xml
<CustomField>
    <fullName>Interim_Resolution_Target__c</fullName>
    <description>Target Date from Interim Resolution Milestone. Updated from Flow called by Process</description>
    <label>Interim Resolution Target</label>
    <type>DateTime</type>
</CustomField>