unpackaged/main/default/objects/Case/fields/Interim_Solution__c.field-meta.xml
<CustomField>
    <fullName>Interim_Solution__c</fullName>
    <description>Details regarding an interim solution for the customer. Used in conjunction with Interim Resolution milestone.</description>
    <label>Interim Solution</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>