unpackaged/main/default/objects/Case/fields/Interim_Solution_Provided__c.field-meta.xml
<CustomField>
    <fullName>Interim_Solution_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether an Interim Solution was provided. Affects the Update milestone behaviour.</description>
    <label>Interim Solution Provided</label>
    <type>Checkbox</type>
</CustomField>