unpackaged/main/default/objects/Case/fields/Internal_Functional_Area__c.field-meta.xml
<CustomField>
    <fullName>Internal_Functional_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Functional Area for Product Affected</description>
    <label>Internal Functional Area</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Functional_Area__c.Product_Affected__c</field>
            <operation>equals</operation>
            <valueField>$Source.Customer_Product__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Functional_Area__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>