unpackaged/main/default/objects/Case/fields/Internal_URL__c.field-meta.xml
<CustomField>
    <fullName>Internal_URL__c</fullName>
    <formula>$Setup.T1_Control_Settings__c.Internal_URL__c &amp; &quot;/&quot; &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal URL</label>
    <type>Text</type>
</CustomField>