unpackaged/main/default/objects/Case/fields/Is_there_a_scalable_work_around__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_scalable_work_around__c</fullName>
    <description>Used to indicate whether a work-around exists</description>
    <inlineHelpText>Indicate whether a scalable, viable work-around exists</inlineHelpText>
    <label>Is there a scalable work-around?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>