unpackaged/main/default/objects/Case/fields/Jira_Dev_Issue_Count__c.field-meta.xml
<CustomField>
    <fullName>Jira_Dev_Issue_Count__c</fullName>
    <description>The number of Jira Dev Issues linked to this Case.</description>
    <inlineHelpText>The number of Jira Dev Issues linked to this Case.</inlineHelpText>
    <label>Jira Dev Issue Count</label>
    <summaryForeignKey>Jira_Dev_Issue__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>