unpackaged/main/default/objects/Case/fields/Jira_Dev_Issue_CT_Count__c.field-meta.xml
<CustomField>
    <fullName>Jira_Dev_Issue_CT_Count__c</fullName>
    <label>Jira Dev Issue CT Count</label>
    <summaryFilterItems>
        <field>Jira_Dev_Issue__c.Name</field>
        <operation>startsWith</operation>
        <value>CT</value>
    </summaryFilterItems>
    <summaryForeignKey>Jira_Dev_Issue__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>