unpackaged/main/default/objects/Case/fields/Jira_Dev_Issue_CT_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Jira_Dev_Issue_CT_Resolution__c</fullName>
    <description>Handled by Jira/SF sync process for CT Jira issues only</description>
    <label>Jira Dev Issue CT Resolution</label>
    <length>150</length>
    <type>Text</type>
</CustomField>