unpackaged/main/default/objects/Case/fields/Jira_Issue_No__c.field-meta.xml
<CustomField>
    <fullName>Jira_Issue_No__c</fullName>
    <label>Jira Issue No</label>
    <length>15</length>
    <type>Text</type>
</CustomField>