unpackaged/main/default/objects/Case/fields/Jira_Link__c.field-meta.xml
<CustomField>
    <fullName>Jira_Link__c</fullName>
    <formula>Hyperlink(&quot;https://jiradev.code.one/browse/&quot; &amp; Jira_Issue_No__c , Jira_Issue_No__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jira Link</label>
    <type>Text</type>
</CustomField>