unpackaged/main/default/objects/Case/fields/Knowledge_Article_Required__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Knowledge Article Required</label>
    <type>Checkbox</type>
</CustomField>