unpackaged/main/default/objects/Case/fields/Last_Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Last_Customer_Contact__c</fullName>
    <description>The most recent outbound contact with the Customer regarding this Case.</description>
    <inlineHelpText>The most recent outbound contact with the Customer regarding this Case.</inlineHelpText>
    <label>Last Customer Contact</label>
    <type>DateTime</type>
</CustomField>