unpackaged/main/default/objects/Case/fields/Last_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Change__c</fullName>
    <description>Stores the last time the status changed -- used by the Case Business Hours Tools package.</description>
    <label>Last Status Change</label>
    <type>DateTime</type>
</CustomField>