unpackaged/main/default/objects/Case/fields/Milestone_Warning__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Warning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Milestone Warning</label>
    <type>Checkbox</type>
</CustomField>