unpackaged/main/default/objects/Case/fields/New_Customer_Attachment__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Customer Attachment</label>
    <type>Checkbox</type>
</CustomField>