unpackaged/main/default/objects/Case/fields/New_Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Make sure to uncheck this field when you have read the New Incoming Email</inlineHelpText>
    <label>New Customer Email</label>
    <type>Checkbox</type>
</CustomField>