unpackaged/main/default/objects/Case/fields/New_Portal_Case_Comment__c.field-meta.xml
<CustomField>
    <fullName>New_Portal_Case_Comment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A portal customer has added in a comment via the case comments or chatter</inlineHelpText>
    <label>New Portal Case Comment</label>
    <type>Checkbox</type>
</CustomField>