unpackaged/main/default/objects/Case/fields/Non_BAU_Customer_Activity__c.field-meta.xml
<CustomField>
    <fullName>Non_BAU_Customer_Activity__c</fullName>
    <description>Support’s workload can be impacted by non scheduled events or non BAU activities occurring within a Customer&#39;s World. As the Support Team Member is triaging/analysing the case should the case be identified as a non BAU activity the Indicator field will be updated by the Support Team Member.</description>
    <inlineHelpText>What non-scheduled event or non-BAU customer activity is the driver/cause/reason for this case?
Please select N/A if unsure.</inlineHelpText>
    <label>Non-BAU Customer Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Ci to CiA Conversion - Data Migration</fullName>
            </value>
            <value>
                <fullName>Ci to CiA Conversion - Functionality Gaps</fullName>
            </value>
            <value>
                <fullName>Ci to CiA Conversion - Go Live/Showstopper</fullName>
            </value>
            <value>
                <fullName>Performance - On Premise</fullName>
            </value>
            <value>
                <fullName>Performance - Product</fullName>
            </value>
            <value>
                <fullName>Performance - SaaS</fullName>
            </value>
            <value>
                <fullName>Projects - SaaS Transition</fullName>
            </value>
            <value>
                <fullName>Projects - T1 PMO Run</fullName>
            </value>
            <value>
                <fullName>Projects - Sponsor Driven</fullName>
            </value>
            <value>
                <fullName>Release Upgrade - Early Adopter</fullName>
            </value>
            <value>
                <fullName>Release Upgrade - On Premise</fullName>
            </value>
            <value>
                <fullName>Release Upgrade - SaaS</fullName>
            </value>
            <value>
                <fullName>SaaS Outage - Emergency</fullName>
            </value>
            <value>
                <fullName>SaaS Outage - Infrastructure Upgrade</fullName>
            </value>
            <value>
                <fullName>SaaS Outage - Undocumented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>