unpackaged/main/default/objects/Case/fields/Non_billable_Service_Requests__c.field-meta.xml
<CustomField>
    <fullName>Non_billable_Service_Requests__c</fullName>
    <description>Contains either blank or whole numbers.
Owned and used by AMS Programs Team to determine non-billable service requests against a case.</description>
    <formula>CEILING(( Total_Non_billable_Time__c * 60) / 30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of 30 min blocks for the Total Non-billable Time resulting from Timed Items against this Case.</inlineHelpText>
    <label>Non-billable Service Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>