unpackaged/main/default/objects/Case/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <formula>Case(  Origin, &quot;Email&quot;, Image(&quot;https://c.cs10.content.force.com/servlet/servlet.FileDownload?file=015J0000000FavE&quot;, &quot;Email&quot;),
&quot;Phone&quot;, Image(&quot;https://c.cs10.content.force.com/servlet/servlet.FileDownload?file=015J0000000FavJ&quot;, &quot;Phone&quot;),
&quot;web&quot;, Image(&quot;https://c.cs10.content.force.com/servlet/servlet.FileDownload?file=015J0000000FavK&quot;, &quot;Web&quot;),
&quot;Incident&quot;, Image(&quot;https://c.cs10.content.force.com/servlet/servlet.FileDownload?file=015J0000000FmQn&quot;, &quot;Incident&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origin</label>
    <type>Text</type>
</CustomField>