unpackaged/main/default/objects/Case/fields/Outstanding_Activities_by_Client__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Activities_by_Client__c</fullName>
    <description>Outstanding Activities to be performed by Client</description>
    <inlineHelpText>Outstanding Activities to be performed by Client</inlineHelpText>
    <label>Outstanding Activities by Client</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>