unpackaged/main/default/objects/Case/fields/Preferred_Date__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Date__c</fullName>
    <defaultValue>DATETIMEVALUE(
CASE( 
  MOD( TODAY() - DATE( 1900, 1, 7 ), 7 ),
  1, TODAY() + 2 + 5,
  2, TODAY() + 2 + 5,
  3, TODAY() + 2 + 5,
  4, TODAY() + 2 + 5,
  5, TODAY() + 2 + 5,
  6, TODAY() + 1 + 5,
  TODAY() + 5
)
) +(12/24)</defaultValue>
    <inlineHelpText>Please note this a preference only, and is subject to confirmation. Minimum 5 working days notice is required for a request to be scheduled.</inlineHelpText>
    <label>Preferred Date</label>
    <type>Date</type>
</CustomField>