unpackaged/main/default/objects/Case/fields/Priority_Change_Comment__c.field-meta.xml
<CustomField>
    <fullName>Priority_Change_Comment__c</fullName>
    <label>Priority Reason</label>
    <type>TextArea</type>
</CustomField>