unpackaged/main/default/objects/Case/fields/Priority_Has_Changed__c.field-meta.xml
<CustomField>
    <fullName>Priority_Has_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priority Has Changed</label>
    <type>Checkbox</type>
</CustomField>