unpackaged/main/default/objects/Case/fields/Priority_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Priority_Indicator__c</fullName>
    <formula>Case(Priority, &quot;Critical&quot;,  IMAGE(&quot;https://technologyone.my.salesforce.com/servlet/servlet.ImageServer?id=015G000000IiYam&amp;oid=00DG0000000jBju&quot;, &quot;&quot;),
&quot;Urgent&quot;, Image(&quot;https://technologyone.my.salesforce.com/servlet/servlet.ImageServer?id=015G000000IiYav&amp;oid=00DG0000000jBju&quot;, &quot;&quot;),
&quot;High&quot;, Image(&quot;https://technologyone.my.salesforce.com/servlet/servlet.ImageServer?id=015G000000IiYb0&amp;oid=00DG0000000jBju&quot;, &quot;&quot;),
&quot;Medium&quot;, Image(&quot;https://technologyone.my.salesforce.com/servlet/servlet.ImageServer?id=015G000000IiYb5&amp;oid=00DG0000000jBju&quot;, &quot;&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Indicator</label>
    <type>Text</type>
</CustomField>