unpackaged/main/default/objects/Case/fields/Problem_Cases__c.field-meta.xml
<CustomField>
    <fullName>Problem_Cases__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Problem Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>