unpackaged/main/default/objects/Case/fields/Problem_Type__c.field-meta.xml
<CustomField>
    <fullName>Problem_Type__c</fullName>
    <label>Problem Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Feature</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>