unpackaged/main/default/objects/Case/fields/Proceed_with_Quote__c.field-meta.xml
<CustomField>
    <fullName>Proceed_with_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>We have advised the customer that their request is not covered under maintenance and asked if they would like to receive a quote for the consulting services required. This indicates the customer wishes to receive a quote.</description>
    <inlineHelpText>This indicates that the customer wishes to receive a quote.</inlineHelpText>
    <label>Proceed with Quote</label>
    <type>Checkbox</type>
</CustomField>