unpackaged/main/default/objects/Case/fields/Product_Information__c.field-meta.xml
<CustomField>
    <fullName>Product_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Information</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>