unpackaged/main/default/objects/Case/fields/Quote_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Quote_Expiry__c</fullName>
    <description>The date/time the quote expires. This is calculated when the quote is sent. The value is used to automatically close the Case if there is no response from the customer.</description>
    <inlineHelpText>The date/time the quote expires, and the case closed if there is no response from the customer.</inlineHelpText>
    <label>Quote Expiry</label>
    <type>DateTime</type>
</CustomField>