unpackaged/main/default/objects/Case/fields/Quote_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Quote_Reminder__c</fullName>
    <description>The date/time that a reminder will be sent to the customer if there has been no response to the intial quote. The field is calculated via workflow field update.</description>
    <inlineHelpText>The date/time that a reminder will be sent to the customer if there has been no response to the initial quote.</inlineHelpText>
    <label>Quote Reminder</label>
    <type>DateTime</type>
</CustomField>