unpackaged/main/default/objects/Case/fields/Quote_Second_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Quote_Second_Reminder__c</fullName>
    <description>The date/time that the second reminder will be sent to the customer if there has been no response to the intial quote. The field is calculated via workflow field update.</description>
    <inlineHelpText>The date/time that a second reminder will be sent to the customer if there has been no response to quote.</inlineHelpText>
    <label>Quote Second Reminder</label>
    <type>DateTime</type>
</CustomField>