unpackaged/main/default/objects/Case/fields/Quote_Sent__c.field-meta.xml
<CustomField>
    <fullName>Quote_Sent__c</fullName>
    <description>The date/time the quote was sent. This field is updated by an email workflow rule that recognises the email by its subject containing the word &#39;quote&#39;.</description>
    <inlineHelpText>The date/time the quote was sent. This field is updated by an email workflow rule that recognises the email by its subject containing the word &#39;quote&#39;.</inlineHelpText>
    <label>Quote Sent</label>
    <type>DateTime</type>
</CustomField>