unpackaged/main/default/objects/Case/fields/Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Quote_Status__c</fullName>
    <label>Quote Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>