unpackaged/main/default/objects/Case/fields/Quote_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Status_Date__c</fullName>
    <description>The date the Quote Status was changed</description>
    <inlineHelpText>The date the Quote Status was changed</inlineHelpText>
    <label>Quote Status Date</label>
    <type>DateTime</type>
</CustomField>