unpackaged/main/default/objects/Case/fields/Recommendations_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Recommendations_Discussion__c</fullName>
    <label>Recommendations/Discussion</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>