unpackaged/main/default/objects/Case/fields/Requested_by__c.field-meta.xml
<CustomField>
    <fullName>Requested_by__c</fullName>
    <description>The business unit requesting the change</description>
    <inlineHelpText>Select the business unit requesting this change</inlineHelpText>
    <label>Requested by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S&amp;E</fullName>
            </value>
            <value>
                <fullName>AMS</fullName>
            </value>
            <value>
                <fullName>SCoE</fullName>
            </value>
            <value>
                <fullName>R&amp;D</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>