unpackaged/main/default/objects/Case/fields/Resolved_Date__c.field-meta.xml
<CustomField>
    <fullName>Resolved_Date__c</fullName>
    <description>The date and time the Case Status was set to Resolved</description>
    <inlineHelpText>The date and time the Case Status was set to Resolved</inlineHelpText>
    <label>Date/Time Resolved</label>
    <type>DateTime</type>
</CustomField>