unpackaged/main/default/objects/Case/fields/Response_MS_Warning__c.field-meta.xml
<CustomField>
    <fullName>Response_MS_Warning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Response Milestone Warning</description>
    <label>Response MS Warning</label>
    <type>Checkbox</type>
</CustomField>