unpackaged/main/default/objects/Case/fields/SaaS_Service_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Service_Request_Type__c</fullName>
    <inlineHelpText>Refer to the SaaS Snapshot Release - Process and Schedule knowledge article for information on Fastline/Mainline.</inlineHelpText>
    <label>SaaS Service Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Environment Refresh</fullName>
            </value>
            <value>
                <fullName>Environment Upgrade</fullName>
            </value>
            <value>
                <fullName>eService Configuration Update</fullName>
            </value>
            <value>
                <fullName>Email Configuration</fullName>
            </value>
            <value>
                <fullName>Move from Mainline to Fastline</fullName>
            </value>
            <value>
                <fullName>Move from Fastline to Mainline</fullName>
            </value>
            <value>
                <fullName>SFTP</fullName>
            </value>
            <value>
                <fullName>Scanwatcher</fullName>
            </value>
            <value>
                <fullName>Drag-it-in</fullName>
            </value>
            <value>
                <fullName>Crystal Desktop</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Environment Refresh and Upgrade</fullName>
                <isActive>false</isActive>
                <label>Environment Refresh and Upgrade</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>